@@ -4,11 +4,18 @@ namespace NewWave {
   
   WaveletCoefficient::WaveletCoefficient(size_t yLevel,
                                          size_t phiLevel,
+                                         size_t key,
                                          double value):
-  _value(value), _yLevel(yLevel), _phiLevel(phiLevel){}
+  _value(value),
+  _yLevel(yLevel), _phiLevel(phiLevel),
+  _key(key){}
   
   double WaveletCoefficient::value()const{
     return _value;
+  }
+  
+  size_t WaveletCoefficient::key()const{
+    return _key;
   }
   
   size_t WaveletCoefficient::yLevel()const{
